--- a/AgriMarket.WebAssembly/Layout/NavMenu.razor
+++ b/AgriMarket.WebAssembly/Layout/NavMenu.razor
@@ -11,7 +11,9 @@
 
 <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" runat="server" href="#">AgriMarket</a>
+        <a class="navbar-brand" runat="server" href="#">
+            <img src="imagenes/logo.jpeg" style="height: 50px; margin-right: 20px;" alt="AgriMarket Logo" />AgriMarket
+        </a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar navegación" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
