--- a/AgriMarket.WebAssembly/Pages/Admin/Usuario.razor
+++ b/AgriMarket.WebAssembly/Pages/Admin/Usuario.razor
@@ -5,13 +5,12 @@
 @inject IToastService toastService
 @inject NavigationManager _navServicio
 
-
 @attribute [Authorize(Roles = "Administrador, Productor")]
 
-<div class="row justify-content-center  mt-3">
+<div class="row justify-content-center mt-3">
     <p class="col-sm-12 col-md-8 col-xl-10 h4 mt-2">@Titulo</p>
 </div>
-<div class="row justify-content-center  mt-3">
+<div class="row justify-content-center mt-3">
     <div class="col-sm-12 col-md-8 col-xl-10">
         <EditForm Model="modelo" OnValidSubmit="GuardarCambios">
             <DataAnnotationsValidator></DataAnnotationsValidator>
@@ -20,40 +19,37 @@
                 <span class="input-group-text bg-light" id="basic-addon3">Nombre Completo</span>
                 <input type="text" class="form-control" @bind-value="modelo.NombreCompleto">
             </div>
-            <ValidationMessage For="@(()=>modelo.NombreCompleto)" />
+            <ValidationMessage For="@(() => modelo.NombreCompleto)" />
 
             <div class="input-group mt-3">
                 <span class="input-group-text bg-light" id="basic-addon3">Correo</span>
                 <input type="text" class="form-control" @bind-value="modelo.Correo"><br />
             </div>
-            <ValidationMessage For="@(()=>modelo.Correo)" />
+            <ValidationMessage For="@(() => modelo.Correo)" />
 
             <div class="input-group mt-3">
                 <span class="input-group-text bg-light" id="basic-addon3">Contraseña</span>
                 <input type="password" class="form-control" @bind-value="modelo.Clave">
             </div>
-            <ValidationMessage For="@(()=>modelo.Clave)" />
+            <ValidationMessage For="@(() => modelo.Clave)" />
 
             <div class="input-group mt-3">
                 <span class="input-group-text bg-light" id="basic-addon3">Confirmar Contraseña</span>
                 <input type="password" class="form-control" @bind-value="modelo.ConfirmarClave">
             </div>
-            <ValidationMessage For="@(()=>modelo.ConfirmarClave)" />
+            <ValidationMessage For="@(() => modelo.ConfirmarClave)" />
 
             <div class="mt-3">
                 <button type="submit" class="btn btn-primary" style="width:130px">@boton</button>
                 <a href="/usuarios" class="btn btn-secondary" style="width:130px">Volver</a>
             </div>
         </EditForm>
-
-
     </div>
-
 </div>
 
 @code {
     [Parameter]
-    public int Id { get; set;}
+    public int Id { get; set; }
     private string Titulo = "Nuevo Usuario";
     private string boton = "Crear";
     private UsuarioDTO modelo = new UsuarioDTO();
@@ -72,7 +68,9 @@
                 modelo.ConfirmarClave = modelo.Clave;
             }
             else
+            {
                 toastService.ShowWarning(response.Mensaje);
+            }
         }
     }
 
@@ -89,6 +87,7 @@
 
         if (Id != 0)
         {
+            // Si está editando, no cambiar el rol a menos que sea necesario
             var response = await usuarioServicio.Editar(modelo);
             if (response.EsCorrecto)
             {
@@ -102,16 +101,18 @@
         }
         else
         {
-            modelo.Rol = "Administrador";
+            // Por defecto, asignar el rol de Productor al crear un nuevo usuario
+            modelo.Rol = "Productor";
+
             var response = await usuarioServicio.Crear(modelo);
             if (response.EsCorrecto)
             {
-                mensaje = "Usuario creado con exito";
+                mensaje = "Usuario creado con éxito";
             }
             else
             {
                 respuesta = false;
-                mensaje = "No se pudo crear";
+                mensaje = response.Mensaje;
             }
         }
 
@@ -119,7 +120,10 @@
         {
             toastService.ShowSuccess(mensaje);
             _navServicio.NavigateTo("/usuarios");
-        }else
+        }
+        else
+        {
             toastService.ShowWarning(mensaje);
+        }
     }
 }
