--- a/AgriMarket.WebAssembly/Pages/Home.razor
+++ b/AgriMarket.WebAssembly/Pages/Home.razor
@@ -46,7 +46,7 @@
     <!-- Sección Principal con Imagen y Bienvenida -->
     <div class="container text-center my-5">
         <!-- Imagen de Bienvenida -->
-        <img src="imagenes/agricultura.jpg" alt="Bienvenida a AgriMarket" class="img-fluid mb-4" style="max-height: 300px;" />
+        <img src="imagenes/agricultura.jpg" alt="Bienvenida a AgriMarket" class="img-fluid mb-4" style="max-height: stretch;" />
 
         <!-- Texto de Bienvenida -->
         <h1 class="display-4">Bienvenidos a AgriMarket</h1>
